listagem de eventos do organizador logado
